updated and prepare for release

--- a/site/lib/index.html
+++ b/site/lib/index.html
@@ -9,4 +9,4 @@ is_index: true
 <li><a href="{{ post.url }}">{% if post.desc %}{{ post.desc }}: {% endif %}{{ post.title }}</a></li>
 	{% endif %}
 {% endfor %}
-</ul><h3><a href="/">&lsaquo;&nbsp;&nbsp;back&nbsp;</a></h3>
+</ul><h2><a href="/0.6/lib">Archieved 0.6</a></h2><h3><a href="/">&lsaquo;&nbsp;&nbsp;back&nbsp;</a></h3>
