--- a/site/index.html
+++ b/site/index.html
@@ -5,34 +5,34 @@ is_index: true
 {% for news in site.posts limit:1 %}
 <h2><a class="news" href="{{ news.url }}">{{ news.title }}&nbsp;&rsaquo;</a></h2>
 {% endfor %}
-<h1>Intro</h1>
-<p>Around 2010, when Lian and I was working on our gesture recognition demo, out
-of the frustration to abstract redundant image preprocessing operations into a
-set of clean and concise functions, I started to consider moving away from the
-stack. Why? Well, after two years, ccv is the very answer.</p>
-<h2>Cached Image Preprocessing</h2>
+<h2>Backstory</h2>
+<p>I set to build ccv with a minimalism inspiration. That was back in 2010, out
+of the frustration with the computer vision library then I was using, ccv
+was meant to be a much easier to deploy, simpler organized code with a bit
+caution with dependency hygiene. The simplicity and minimalistic nature at
+then, made it much easier to integrate into any server-side deployment
+environments.</p>
+<h2>Portability and Embeddable</h2>
+<p>Fast forward to now, the world is quite different from then, but ccv adapts
+pretty well in this new, mobile-first environment. It now runs on Mac OSX,
+Linux, FreeBSD, Windows\*, iPhone, iPad, Android, Raspberry Pi. In fact,
+anything that has a proper C compiler probably can run ccv. The majority
+(with notable exception of convolutional networks, which requires a BLAS
+library) of ccv will just work with no compilation flags or dependencies.</p>
+<h2>Modern Computer Vision Algorithms</h2>
+<p>One core concept of ccv development is <b>application driven</b>. Thus, ccv ends
+up implementing a handful state-of-art algorithms. It includes a close to
+state-of-the-art image classifier, a state-of-the-art frontal face detector,
+reasonable collection of object detectors for pedestrians and cars, a useful
+text detection algorithm, a long-term general object tracking algorithm,
+and the long-standing feature point extraction algorithm.</p>
+<h2>Clean Interface with Cached Image Preprocessing</h2>
 <p>Many computer vision tasks nowadays consist of quite a few preprocessing
 layers: image pyramid generation, color space conversion etc. These potentially
 redundant operations cannot be easily eliminated within a mature API. ccv
 provides a built-in cache mechanism that, while maintains a clean function
 interface, effectively does transparent cache for you.
 <a href="/doc/doc-cache"> - How?</a></p>
-<h2>Easy to Embed</h2>
-<p>While it depends on quite a few libraries for the best performance and
-complete feature, ccv's majority functionalities will still work without these
-libraries. You can even drop the ccv source code into your project, and it will
-work!</p>
-<h2>Modern Computer Vision Algorithms</h2>
-<p>One core concept of ccv development is "application driven". As a result, ccv
-end up implementing a handful state-of-art algorithms. It includes
-<a href="/doc/doc-bbf">a very fast detection algorithm for rigid object</a>
-(face etc.), <a href="/doc/doc-icf">a strong rigid object detection algorithm</a>
-(pedestrian etc.), <a href="/doc/doc-dpm">an accurate object detection algorithm
-for somewhat difficult object</a> (car, cat etc.), <a href="/doc/doc-convnet">a
-deep-learning based near state-of-the-art image classifier</a>, <a href="/doc/doc-swt">a
-state-of-the-art text detection algorithm</a>, <a href="/doc/doc-tld">a long term
-object tracking algorithm</a>, and <a href="/doc/doc-sift">the long-standing
-feature point detection algorithm</a>.</p>
 <p>For computer vision community, there is no shortage of good algorithms, good
 implementation is what it lacks of. After years, we stuck in between either the
 high-performance, battle-tested but old algorithm implementations, or the new,
