--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@ environments.</p>
 <h2>Portability and Embeddable</h2>
 <p>Fast forward to now, the world is quite different from then, but ccv adapts
 pretty well in this new, mobile-first environment. It now runs on Mac OSX,
-Linux, FreeBSD, Windows\*, iPhone, iPad, Android, Raspberry Pi. In fact,
+Linux, FreeBSD, Windows*, iPhone, iPad, Android, Raspberry Pi. In fact,
 anything that has a proper C compiler probably can run ccv. The majority
 (with notable exception of convolutional networks, which requires a BLAS
 library) of ccv will just work with no compilation flags or dependencies.</p>
