--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@ was meant to be a much easier to deploy, simpler organized code with a bit
 caution with dependency hygiene. The simplicity and minimalistic nature at
 then, made it much easier to integrate into any server-side deployment
 environments.</p>
-<h2>Portability and Embeddable</h2>
+<h2>Portable and Embeddable</h2>
 <p>Fast forward to now, the world is quite different from then, but ccv adapts
 pretty well in this new, mobile-first environment. It now runs on Mac OSX,
 Linux, FreeBSD, Windows*, iPhone, iPad, Android, Raspberry Pi. In fact,
